# AdventOfCode

AdventOfCode2020/: AdventOfCode2020.sln
AdventOfCode2020/AdventOfCode/: .gitignore  AbstractDay.cpp  AbstractDay.h  AdventOfCode.cpp  AdventOfCode.vcxproj  AdventOfCode.vcxproj.filters  CMakeLists.txt  Day00.h  Day01.cpp  Day01.h  Day02.cpp  Day02.h  Day03.cpp  Day03.h  Day04.cpp  Day04.h  Day05.cpp  Day05.h  Day06.cpp  Day06.h  Day07.cpp  Day07.h  Day08.cpp  Day08.h  Day09.cpp  Day09.h  Day10.cpp  Day10.h  Day11.cpp  Day11.h  Day12.cpp  Day12.h  Day13.cpp  Day13.h  Day14.cpp  Day14.h  Day15.cpp  Day15.h  Day16.cpp  Day16.h  (+19 more)
AdventOfCode2020/AdventOfCode/input/: day00.txt  input23.txt
AdventOfCode2021/: AdventOfCode.cpp  CMakeLists.txt  Day00.cpp  Day00.h  Day01.cpp  Day02.cpp  Day02.h  Day03.cpp  Day03.h  Day04.cpp  Day04.h  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  vec2.cpp  vec2.h
AdventOfCode2021/bonus/: Day08.ods
AdventOfCode2022/: .gitignore  CMakeLists.txt  Day00.cpp  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  graph.cpp
AdventOfCode2022/inputs/: day00.sql
AdventOfCode2022/src/: day00.sql
AdventOfCode2022/tables/: aoc_debug.sql  aoc_input.sql  aoc_input_all.sql
AdventOfCode2023/: .gitignore  CMakeLists.txt  Day00.cpp  Day01.cpp  Day01Y.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day20.cpp  Day21.cpp  Day22.cpp  parser.cpp  util.cpp  vec2.cpp  vec3.cpp
AdventOfCode2024/: .gitignore  CMakeLists.txt  Day00.cpp  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day08_cust.cpp  Day08_std.cpp  Day09.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day24.cpp  buffer.cpp  hash_map.cpp  parser.cpp  util.cpp  vec2.cpp
AdventOfCode2025/: CMakeLists.txt  Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp  Day08.cpp  Day09.cpp  Day10.cpp  buffer.cpp  directions.cpp  mat2.cpp  util.cpp  vec2.cpp  vec3.cpp
Math/: Math.vcxproj  Math.vcxproj.filters  pch.h  vec.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
